--- a/public/main.html
+++ b/public/main.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="medApp">
+<html lang="en">
   <head>
     <title>Evidation Health | Take Home</title>
     <meta charset="utf-8">
-    <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Front-End Developer Assignment" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/form.css" />
   </head>
 <body>
+
+  <!-- Company Logo photoshopped -->
+  <div class="text-center logo">
+    <img src="src/image/medcompany-logo.png" alt="green-o" />
+  </div>
 
   <div class="form-box container-fluid">
     <section class="container">
@@ -66,6 +71,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-  <script src="src/app.js"></script>
+  <script src="src/js/app.js"></script>
 </body>
 </html>
