add a contact us link as a footer

--- a/public/main.html
+++ b/public/main.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="src/css/form.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/logo.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/footer.css" />
   </head>
 <body>
 
@@ -67,6 +69,10 @@
     </div>    <!-- .container-page -->
     </section><!-- .container -->
   </div>      <!-- .form-box -->
+
+  <footer id=footer>
+    <p class="contact text-center"><a href="http://www.evidation.com/contact/">Contact Us</a></p>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
