add medcompany json file

--- a/public/main.html
+++ b/public/main.html
@@ -80,7 +80,7 @@
             <!-- Form Submission -->
             <div class="checkbox">
               <input type="submit" id="btn-valid" class="btn btn-success col-lg-12 pull-left"
-                     ng-disabled="vform.$invalid"/>
+                     ng-click="submitForm()" ng-disabled="vform.$invalid"/>
             </div>
 
           </fieldset>
